feat(Bla) Trying slash -a

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        My Heading
+    </h1>
+    <section>
+        This is cool stuff
+    </section>
 </body>
 </html>
